	display the timeline spec string in notification.

2010-03-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-map): bind "SPC" and "C-v" to
	`twittering-scroll-up', and bind "<backspace>" and "M-v" to
	`twittering-scroll-down'.
	(twittering-scroll-up): new function. Thanks to Jim Crossley.
	(twittering-scroll-down): new function.

2010-03-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-remove-inactive-processes): add
	`exit' and `signal' to `inactive-statuses'.

2010-03-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-other-user-list-interactive): 
	Revert part of 2010-03-12 change to prevent an overwrite of a
	message which is outputted by `twittering-read-list-name'.

	* twittering-mode.el (twittering-http-default-sentinel): Check
	process-status before processing sentinel.

2010-03-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-generate-status-formater-base):
	fix the formater for "%FACE[...]{...}".

2010-03-13  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Improve a support of sending direct
	messages.

	* twittering-mode.el (twittering-update-status-from-pop-up-buffer):
	Use twitter API which is related of direct_messages if necessary.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-timeline-spec-is-direct-messages-p): New defun.
	(twittering-reply-recipient): Rename from
	`twittering-reply-to-id'.
	(twittering-update-status-from-pop-up-buffer): Adjust callers.
	(twittering-render-timeline): Add a text property `belongs-spec'.
	(twittering-update-status-from-pop-up-buffer): Add optional
	arguments `username' and `spec'.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-enter): Adjust callers.

	* twittering-mode.el (twittering-edit-setup-help): Add optional
	arguments `username' and `spec'.
	(twittering-update-status-from-pop-up-buffer): Call it here.